rabbitmq/rabbitmq/templates/pod-test.yaml
---
# Source: rabbitmq/templates/pod-test.yaml








---
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-test"
  labels:
    release_group: release-name
    application: rabbitmq
    component: test
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
    "helm.sh/hook": test-success
spec:
  securityContext:
    runAsUser: 999
    
  serviceAccountName: release-name-test
  nodeSelector:
    openstack-control-plane: "enabled"
  restartPolicy: Never
  containers:
    - name: release-name-rabbitmq-test
      image: "docker.io/rabbitmq:3.7.13-management"
      imagePullPolicy: IfNotPresent
      
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        
      command:
        - /tmp/rabbitmq-test.sh
      volumeMounts:
        - name: pod-tmp
          mountPath: /tmp
        - name: rabbitmq-bin
          mountPath: /tmp/rabbitmq-test.sh
          subPath: rabbitmq-test.sh
          readOnly: true
  volumes:
    - name: pod-tmp
      emptyDir: {}
    - name: rabbitmq-bin
      configMap:
        name: "release-name-rabbitmq-bin"
        defaultMode: 0555
