rabbitmq/rabbitmq/templates/statefulset.yaml
---
# Source: rabbitmq/templates/statefulset.yaml


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "release-name-rabbitmq"
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: rabbitmq
    component: server
spec:
  serviceName: rabbitmq
  replicas: 2
  podManagementPolicy: "Parallel"
  selector:
    matchLabels:
      release_group: release-name
      application: rabbitmq
      component: server
  template:
    metadata:
      labels:
        release_group: release-name
        application: rabbitmq
        component: server
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "0d07c5311e14b81dd7fd33a45c19fb10e839b05b47d9527cbf7b8bffce05cea0"
        configmap-etc-hash: "2f325879f2f3dc45297630f246c3e1cc362a602e991221a7582365bdd82b27f7"
        secret-rabbit-admin-hash: "e665593b36b9c35863a8a89e4e289b70718aef283e03121a782dce38e8d3345a"
        secret-erlang-cookie-hash: "66f510c3557ef83206715e1e9fa19076de38ad2a530a6bcb02a0eb310ce723ea"
        
    spec:
      securityContext:
        runAsUser: 999
        
      serviceAccountName: "release-name-rabbitmq"
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - rabbitmq
                  - key: component
                    operator: In
                    values:
                    - server
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: "enabled"
      containers:
        - name: rabbitmq
          image: "docker.io/rabbitmq:3.7.13"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            readOnlyRootFilesystem: false
            runAsUser: 999
            
          command:
            - /tmp/rabbitmq-start.sh
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
            - name: clustering
              protocol: TCP
              containerPort: 25672
          readinessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 10
            exec:
              command:
              - /tmp/rabbitmq-readiness.sh
          livenessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 10
            exec:
              command:
              - /tmp/rabbitmq-liveness.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
            - name: rabbitmq-bin
              mountPath: /tmp/rabbitmq-start.sh
              subPath: rabbitmq-start.sh
              readOnly: true
            - name: rabbitmq-bin
              mountPath: /tmp/rabbitmq-readiness.sh
              subPath: rabbitmq-readiness.sh
              readOnly: true
            - name: rabbitmq-bin
              mountPath: /tmp/rabbitmq-liveness.sh
              subPath: rabbitmq-liveness.sh
              readOnly: true
            - name: rabbitmq-etc
              mountPath: /etc/rabbitmq/enabled_plugins
              subPath: enabled_plugins
              readOnly: true
            - name: rabbitmq-etc
              mountPath: /etc/rabbitmq/rabbitmq.conf
              subPath: rabbitmq.conf
              readOnly: true
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: rabbitmq-bin
          configMap:
            name: "release-name-rabbitmq-bin"
            defaultMode: 0555
        - name: rabbitmq-etc
          configMap:
            name: "release-name-rabbitmq-etc"
            defaultMode: 0444
        - name: rabbitmq-erlang-cookie
          secret:
            secretName: "release-name-erlang-cookie"
            defaultMode: 0444
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 256Mi
        storageClassName: general
