rabbitmq/rabbitmq/templates/ingress-management.yaml
---
# Source: rabbitmq/templates/ingress-management.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-mgr-90b19a
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - host: release-name-mgr-90b19a
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: http
    - host: release-name-mgr-90b19a.openstack
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: http
    - host: release-name-mgr-90b19a.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: http
